# Checkio

./: .gitignore  README.md  install.sh  package-lock.json  pyproject.toml  requirements.txt  sum_pgm.c  uninstall.sh
config/: DEFAULT_CONFIG.json
docs/: GLOSSARY.md  about.md  data-structures.md  doubts.md  presentation_docs.md  setup.md
src/: main.py
src/cli/: create.py  do_testing.py  get_version.py  handle_about.py  handle_analysis.py  handle_cli.py  handle_config.py  handle_create.py  handle_listing.py  handle_run.py  handle_serve.py  handle_submit.py  handle_user_create.py  handle_user_delete.py  handle_view.py  show_about.py
src/cli/ui/: create_testcase.py  create_testcase_screen.py  global.tcss  stopwatch.tcss  test.py  testcase_cont.py
src/cli/utils/: custom_formats.py  custom_help.py  get_version.py
src/config/: DEFAULT_CONFIG.json
src/core/: check_session.py  global_store.py  pre_requisites.py
src/core/auth/: check_user.py  init_user.py  validate_user.py
src/core/db/: db.py  init_db.py  schema.py  schema.sql  setup.py  testcases.py
src/core/eval/: handle_eval.py
src/core/runner/: base_runner.py  c_runner.py  java_runner.py  python_runner.py
src/docs/: about.md
src/tui/: run.py
src/utils/: errors.py  find_lang.py  get-resource-path.py  get_local_ip.py  hashing.py  logo_print.py  pydantic_models.py  spinners.py  testcase_model.py  utils.py
src/utils/decorators/: handle_keyboard_interrupt.py
temp/: your_code.c
testing/: AddNum.java  add.c  add.py  add_command_args.c  compile_error.c  mem_out_of_bound.c  runtime_error.c  seg_fault.c
(+81 files in other folders)
