[project]
name = "checkio"
version = "0.1.0"
description = "Checkio - A tool that not only tests your code but also suggests improvements and error fixes, making lab evaluations smarter and faster."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "rich>=13.9.4",
    "textual>=1.0.0",
]
